Sat Aug 18 15:52:50 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insnhelper.ci (vm_send_optimize): use MEMMOVE to shift values inside
	  an array.

Sat Aug 18 15:45:34 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insnhelper.ci (vm_yield_setup_args): rsize and psize should not be
	  negative.

Sat Aug 18 14:35:00 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insnhelper.ci (vm_callee_setup_arg, vm_send_optimize,
	  vm_yield_setup_args): bulk copy for arguments.

Sat Aug 18 13:55:58 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): fix to allow self.x=
	  if x= is private.

	* bootstraptest/test_method.rb: add a test for above.

Sat Aug 18 14:05:34 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reg_compile_gen): obtain error info from errinfo.

	* re.c (rb_reg_error_desc): make RegexpError for initialization error.

	* re.c (rb_reg_compile): return nil and set errinfo if error.

Sat Aug 18 13:23:01 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c: $! should not be writable.

	* eval.c (rb_rubylevel_errinfo): added.  rb_errinfo() returns
	  rb_threa_t#errinfo.  rb_rubylevel_errinfo() returns $! value.

Sat Aug 18 13:14:40 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_callee_setup_arg): fix to check arguments
	  correctly. [ruby-dev:31472]

Sat Aug 18 13:13:06 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_exception.rb: add escape character ("\") for
	  editors.

Sat Aug 18 12:42:50 2007  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_yield.rb (TestYieldGen): add test for yielding to
	  lambda using lambda parameter passing emulator.

Sat Aug 18 12:24:30 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sample/test.rb, test/ruby/test_system.rb(valid_syntax?): keep
	  comment lines first.

Sat Aug 18 11:44:59 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_set_arguments), insnhelper.ci
	  (vm_callee_setup_arg, vm_yield_setup_args): 
	  fix to cause raise on "lambda{|a|}.call(1, 2)".