@@ -1,3 +1,9 @@
+Sat Aug 18 15:59:52 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (detach_process_watcher): should not pass the pointer
+	  to an auto variable to the thread to be created.  pointed and
+	  fix by KUBO Takehiro <kubo at jiubao.org>  [ruby-dev:30618]
+
 Sat Aug 18 15:52:50 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* insnhelper.ci (vm_send_optimize): use MEMMOVE to shift values inside
